--- a/res/layout/appwidget.xml
+++ b/res/layout/appwidget.xml
@@ -11,15 +11,59 @@
 		License.
 	-->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:orientation="vertical" android:gravity="center_vertical"
-	android:background="@drawable/appwidget_bg">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="fill_parent">
 
-	<TextView android:id="@+id/title" android:layout_width="fill_parent"
-		android:gravity="center_horizontal|center_vertical"
-		android:layout_height="wrap_content" android:textColor="#ffffff"
-		android:textSize="36sp" android:singleLine="true" android:fadingEdge="horizontal"
-		android:fadingEdgeLength="10dip" android:ellipsize="none" />
+	<LinearLayout android:layout_width="fill_parent"
+		android:layout_height="fill_parent" android:orientation="horizontal"
+		android:gravity="center_vertical|center_horizontal"
+		android:paddingRight="9sp" android:paddingLeft="50px">
+		<LinearLayout android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:orientation="horizontal"
+			android:gravity="center_vertical|right" android:background="@drawable/white75">
+			<TextView android:id="@+id/day2" android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:textColor="#00000000"
+				android:textSize="38sp" android:singleLine="true" android:gravity="center_vertical|right"
+				android:text=" " />
+			<!--
+				<TextView android:layout_width="wrap_content"
+				android:layout_height="fill_parent" android:textColor="#00000000"
+				android:textSize="18sp" android:singleLine="true" android:text="日"
+				android:gravity="bottom|right" /> <TextView android:id="@+id/time2"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:textColor="#00000000"
+				android:textSize="38sp" android:singleLine="true"
+				android:gravity="center_vertical|right" />
+			-->
+		</LinearLayout>
+	</LinearLayout>
 
-</LinearLayout>
+	<ImageView android:layout_width="wrap_content"
+		android:layout_height="fill_parent" android:gravity="center_vertical|left"
+		android:src="@drawable/qb_128" />
+
+	<LinearLayout android:layout_width="fill_parent"
+		android:layout_height="fill_parent" android:orientation="horizontal"
+		android:gravity="center_vertical|center_horizontal"
+		android:paddingRight="18sp">
+		<LinearLayout android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:orientation="horizontal"
+			android:gravity="center_vertical|right">
+			<TextView android:id="@+id/day" android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:textColor="#f1838a"
+				android:shadowColor="#bf000000" android:shadowDx="0"
+				android:shadowDy="2" android:shadowRadius="2" android:textSize="38sp"
+				android:singleLine="true" android:gravity="center_vertical|right" />
+			<TextView android:layout_width="wrap_content"
+				android:layout_height="fill_parent" android:textColor="#f1838a"
+				android:shadowColor="#bf000000" android:shadowDx="0"
+				android:shadowDy="1" android:shadowRadius="1" android:textSize="16sp"
+				android:singleLine="true" android:text="日" android:gravity="bottom|right" />
+			<TextView android:id="@+id/time" android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:textColor="#f1838a"
+				android:shadowColor="#bf000000" android:shadowDx="0"
+				android:shadowDy="2" android:shadowRadius="2" android:textSize="38sp"
+				android:singleLine="true" android:gravity="center_vertical|right" />
+		</LinearLayout>
+	</LinearLayout>
+</RelativeLayout>
