--- a/res/layout/appwidget.xml
+++ b/res/layout/appwidget.xml
@@ -45,4 +45,9 @@
 				android:singleLine="true" android:gravity="center_vertical|right" />
 		</LinearLayout>
 	</LinearLayout>
+
+	<ImageButton android:id="@+id/link" android:layout_width="fill_parent"
+		android:layout_height="fill_parent" android:src="@drawable/zero"
+		android:background="@drawable/zero" />
+
 </RelativeLayout>
