--- a/res/layout/appwidget.xml
+++ b/res/layout/appwidget.xml
@@ -9,7 +9,7 @@
 		android:paddingRight="9sp" android:paddingLeft="50px">
 		<LinearLayout android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:orientation="horizontal"
-			android:gravity="center_vertical|right" android:background="@drawable/white75">
+			android:gravity="center_vertical|right" android:background="@drawable/white75_round">
 			<TextView android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:textColor="#00000000"
 				android:textSize="38sp" android:singleLine="true" android:gravity="center_vertical|right"
