--- a/res/layout/appwidget.xml
+++ b/res/layout/appwidget.xml
@@ -33,7 +33,7 @@
 				android:shadowColor="#bf000000" android:shadowDx="0"
 				android:shadowDy="2" android:shadowRadius="2" android:textSize="38sp"
 				android:singleLine="true" android:gravity="center_vertical|right" />
-			<TextView android:layout_width="wrap_content"
+			<TextView android:id="@+id/daytxt" android:layout_width="wrap_content"
 				android:layout_height="fill_parent" android:textColor="#f1838a"
 				android:shadowColor="#bf000000" android:shadowDx="0"
 				android:shadowDy="1" android:shadowRadius="1" android:textSize="16sp"
