--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2007 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-  
-          http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
+	<!--
+		Copyright (C) 2007 The Android Open Source Project Licensed under the
+		Apache License, Version 2.0 (the "License"); you may not use this file
+		except in compliance with the License. You may obtain a copy of the
+		License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
+		by applicable law or agreed to in writing, software distributed under
+		the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+		CONDITIONS OF ANY KIND, either express or implied. See the License for
+		the specific language governing permissions and limitations under the
+		License.
+	-->
 
 <resources>
-    
-    <string-array name="deadline_name">
-    	<item>MBS</item>
-    	<item>TBS</item>
-    	<item>CBC</item>
-    	<item>ニコニコ動画</item>
-    	<item>ShowTime</item>
-    </string-array>
 
-    <string-array name="deadline_start">
-    	<item>2011-04-22 02:40:00.000+0900</item>
-    	<item>2011-04-22 03:00:00.000+0900</item>
-    	<item>2011-04-25 02:45:00.000+0900</item>
-    	<item>2011-04-25 04:15:00.000+0900</item>
-    	<item>2011-04-25 12:00:00.000+0900</item>
-    </string-array>
+	<string-array name="deadline_name">
+		<item>MBS</item>
+		<item>TBS</item>
+		<item>CBC</item>
+		<item>ニコニコ動画</item>
+		<item>ShowTime</item>
+	</string-array>
 
-    <string-array name="deadline_end">
-    	<item>2011-04-22 03:40:00.000+0900</item>
-    	<item>2011-04-22 04:30:00.000+0900</item>
-    	<item>2011-04-25 04:15:00.000+0900</item>
-    	<item>null</item>
-    	<item>null</item>
-    </string-array>
-    
+	<string-array name="deadline_start">
+		<item>2011-04-22 02:40:00.000+0900</item>
+		<item>2011-04-22 03:00:00.000+0900</item>
+		<item>2011-04-25 02:45:00.000+0900</item>
+		<item>2011-04-25 04:15:00.000+0900</item>
+		<item>2011-04-25 12:00:00.000+0900</item>
+	</string-array>
+
+	<string-array name="deadline_end">
+		<item>2011-04-22 03:40:00.000+0900</item>
+		<item>2011-04-22 04:30:00.000+0900</item>
+		<item>2011-04-25 04:15:00.000+0900</item>
+		<item>download</item>
+		<item>download</item>
+	</string-array>
+
+	<string-array name="deadline_type">
+		<item>TV</item>
+		<item>TV</item>
+		<item>TV</item>
+		<item>WEB</item>
+		<item>WEB</item>
+	</string-array>
+
 </resources>
