--- a/res/layout/appwidget.xml
+++ b/res/layout/appwidget.xml
@@ -24,18 +24,7 @@
 		<LinearLayout android:layout_width="fill_parent"
 			android:layout_height="wrap_content" android:orientation="horizontal"
 			android:gravity="center_vertical|right">
-			<TextView android:id="@+id/day" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:textColor="#f1838a"
-				android:shadowColor="#bf000000" android:shadowDx="0"
-				android:shadowDy="2" android:shadowRadius="2" android:textSize="38sp"
-				android:singleLine="true" android:gravity="center_vertical|right" />
-			<TextView android:id="@+id/daytxt" android:layout_width="wrap_content"
-				android:layout_height="fill_parent" android:textColor="#f1838a"
-				android:shadowColor="#bf000000" android:shadowDx="0"
-				android:shadowDy="1" android:shadowRadius="1" android:textSize="16sp"
-				android:singleLine="true" android:text="日" android:gravity="bottom|right"
-				android:visibility="gone" />
-			<TextView android:id="@+id/time" android:layout_width="wrap_content"
+			<TextView android:id="@+id/txt" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:textColor="#f1838a"
 				android:shadowColor="#bf000000" android:shadowDx="0"
 				android:shadowDy="2" android:shadowRadius="2" android:textSize="38sp"
