--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -14,35 +14,19 @@
 <resources>
 
 	<string-array name="deadline_name">
-		<item>MBS</item>
-		<item>TBS</item>
-		<item>CBC</item>
-		<item>ニコニコ動画</item>
-		<item>ShowTime</item>
+		<item>第2巻</item>
+		<item>第3巻</item>
+		<item>第4巻</item>
+		<item>第5巻</item>
+		<item>第6巻</item>
 	</string-array>
 
-	<string-array name="deadline_start">
-		<item>2011-04-22 02:40:00.000+0900</item>
-		<item>2011-04-22 03:00:00.000+0900</item>
-		<item>2011-04-25 02:45:00.000+0900</item>
-		<item>2011-04-25 04:15:00.000+0900</item>
-		<item>2011-04-25 12:00:00.000+0900</item>
+	<string-array name="deadline_time">
+		<item>2011-05-25 00:00:00.000+0900</item>
+		<item>2011-06-22 00:00:00.000+0900</item>
+		<item>2011-07-27 00:00:00.000+0900</item>
+		<item>2011-08-24 00:00:00.000+0900</item>
+		<item>2011-09-21 00:00:00.000+0900</item>
 	</string-array>
-
-	<string-array name="deadline_end">
-		<item>2011-04-22 03:40:00.000+0900</item>
-		<item>2011-04-22 04:30:00.000+0900</item>
-		<item>2011-04-25 04:15:00.000+0900</item>
-		<item>download</item>
-		<item>download</item>
-	</string-array>
-
-	<string-array name="deadline_type">
-		<item>TV</item>
-		<item>TV</item>
-		<item>TV</item>
-		<item>WEB</item>
-		<item>WEB</item>
-	</string-array>
-
+	
 </resources>
