--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-	<!--
+<!--
 		Copyright (C) 2007 The Android Open Source Project Licensed under the
 		Apache License, Version 2.0 (the "License"); you may not use this file
 		except in compliance with the License. You may obtain a copy of the
@@ -9,18 +9,26 @@
 		CONDITIONS OF ANY KIND, either express or implied. See the License for
 		the specific language governing permissions and limitations under the
 		License.
-	-->
+-->
 
 <resources>
 
-	<string-array name="deadline_name">
-		<item>EP01</item>
-   		<item>PSP</item>
-	</string-array>
+    <string-array name="deadline_name">
+        <item>nico-en|niconico English</item>
+        <item>BD-usa|BD/DVD USA</item>
+        <item>PSP|ポータブル</item>
+    </string-array>
+    <string-array name="deadline">
+        <item>nico-en	|niconico English EP01			|2012-02-10 20:00:00.000-0800</item>
+        <item>nico-en	|niconico English EP01^On AIR	|2100-01-01 00:00:00.000+0000</item>
+        <item>BD-usa	|BD/DVD USA Vol.1				|2012-02-14 00:00:00.000-0800</item>
+        <item>BD-usa	|BD/DVD USA Vol.1^On SALE		|2012-02-21 00:00:00.000-0800</item>
+        <item>BD-usa	|BD/DVD USA Vol.2				|2012-04-10 00:00:00.000-0800</item>
+        <item>BD-usa	|BD/DVD USA Vol.2^On SALE		|2012-04-17 00:00:00.000-0800</item>
+        <item>BD-usa	|BD/DVD USA Vol.3				|2012-06-12 00:00:00.000-0800</item>
+        <item>BD-usa	|BD/DVD USA Vol.3^On SALE		|2100-01-01 00:00:00.000+0000</item>
+        <item>PSP		|ポータブル						|2012-03-15 00:00:00.000+0900</item>
+        <item>PSP		|ポータブル^発売中					|2100-01-01 00:00:00.000+0000</item>
+    </string-array>
 
-	<string-array name="deadline_time">
-	    <item>2012-02-10 20:00:00.000-0800</item>
-		<item>2012-03-15 00:00:00.000+0900</item>
-	</string-array>
-	
 </resources>
