--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -9,7 +9,14 @@
 		<CheckBoxPreference android:key="char_sayaka" android:title="美樹 さやか" />
 		<CheckBoxPreference android:key="char_qb" android:title="キュゥべえ" />
 	</PreferenceScreen>
-	
+
+   	<PreferenceScreen
+		android:title="@string/preference_countdownselection">
+		<CheckBoxPreference android:key="cd_nico_en" android:title="niconico English" />
+		<CheckBoxPreference android:key="cd_BD_usa" android:title="BD/DVD USA" />
+		<CheckBoxPreference android:key="cd_PSP" android:title="ポータブル" />
+	</PreferenceScreen>
+	    	
 	<Preference android:key="charity_link"
 		android:title="Support Japan"
 		android:summary="Donate via Google">
