add battery warning change timer period to 10 sec

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -55,7 +55,8 @@
 
     <CheckBoxPreference
         android:key="seconds_timer"
-        android:title="Enable seconds timer" />
+        android:title="Show seconds timer"
+        android:summary="Consume more battery" />
 
     <Preference
         android:key="charity_link"
